Fixed spacing in the add a book modal

--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ dialog {
 }
 
 form {
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,7 +106,7 @@ input:focus{
 }
 
 .button-container {
-    margin-top: 10px;
+    margin-top: 20px;
     width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -211,7 +211,7 @@ input:focus{
 }
 
 label {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 label > span {
